@@ -6,6 +6,8 @@ import org.junit.jupiter.api.*;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -22,45 +24,34 @@ class ServicesClientTest {
     }
 
     @Test
-    @DisplayName("train(): Szenario 0 sollte ohne Exception durchlaufen")
-    void testTrainScenario0() {
-        assertDoesNotThrow(() -> client.train(0));
-    }
-
-    @Test
-    @DisplayName("train(): Szenario 0 sollte ohne Exception durchlaufen")
-    void testTrainScenario1() {
-        assertDoesNotThrow(() -> client.train(1));
-    }
-
-    @Test
-    @DisplayName("train(): Szenario 0 sollte ohne Exception durchlaufen")
-    void testTrainScenario2() {
-        assertDoesNotThrow(() -> client.train(2));
-    }
-
-    @Test
     @DisplayName("infer(): Liefert eine Tags-Liste (oder leere Liste), aber kein Null")
     void testInferScenario0() throws Exception {
         // Pfad zu einer Test-CSV (die dein Python-Service kennt)
         // -> hier entweder hart codieren oder per System-Property setzen:
-        String csvPath = System.getProperty("test.csvPath");
+        String csvPath = Paths.get(LocalStore.getSingleton().getInternet_single_notes().toString(), "d0f2188c-8ba1-4cce-b386-6b8c9cfc9d61.csv").toString();
 
-        Assumptions.assumeTrue(csvPath != null && !csvPath.isBlank(),
-                "System Property 'test.csvPath' muss gesetzt sein, z.B. -Dtest.csvPath=/pfad/zu/datei.csv");
-
-        List<String> tags = client.infer(0, csvPath);
+        List<String> tags = client.infer(2, csvPath);
         assertNotNull(tags, "Tags-Liste sollte nie null sein");
+
+        List<String> expected = new ArrayList<>();
+        expected.add("PayPal");
+        assertIterableEquals(expected, tags);
         // Optional:
         // assertFalse(tags.isEmpty(), "Tags-Liste sollte für dieses Test-CSV nicht leer sein");
         System.out.println("Infer tags: " + tags);
     }
 
     @Test
-    @DisplayName("ocr(): Gibt JSON mit Text-Feld zurück")
+    @DisplayName("train(): Szenario 2 sollte ohne Exception durchlaufen")
+    void testTrainScenario2() {
+        assertDoesNotThrow(() -> client.train(2));
+    }
+
+    @Test
+    @DisplayName("trocr: Gibt Ergebnis als JSON zurück")
     void testOcr() throws Exception {
         // kleines Testbild in src/test/resources/testdata/ocr_sample.png anlegen
-        Path imagePath = Path.of("src/test/resources/testdata/ocr_sample.png");
+        Path imagePath = Paths.get(LocalStore.getSingleton().getImages_tmp().toString(), "4.png");
         Assumptions.assumeTrue(Files.exists(imagePath),
                 "Testbild fehlt: " + imagePath.toAbsolutePath());
 
@@ -71,7 +62,9 @@ class ServicesClientTest {
 
         JsonNode root = mapper.readTree(response);
         assertTrue(root.has("text"), "Response-JSON sollte ein Feld 'text' enthalten");
-        System.out.println("OCR text: " + root.get("text").asText());
+        String text = root.get("text").asText();
+        System.out.println("OCR text: " + text);
+        assertEquals("2015,0001", text);
     }
 
     @Test
